# pydiffvg

./: CMakeLists.txt  diffvg.cpp  scene.cpp
apps/: painterly_rendering.py  refine_svg.py
